# grants_hub

./: .gitignore  README.md  main.py  pyproject.toml
app/: config.py  main.py  run_pipeline.py
app/configs/: filtered_grants.json  search_parameters.json
app/models/: models.py
app/services/: filter_service.py  normalization_service.py  scraper_services.py  storage_service.py
app/tests/: conftest.py  test_config.py  test_filer.py  test_filter_service.py  test_main.py  test_models.py  test_scraper.py  test_scraper_services.py  test_storage_service.py
